--- a/category.html
+++ b/category.html
@@ -111,7 +111,84 @@
     <!-- Section filter -->
     <section class="content-block content-block-3 wm-filter">
         <div class="main">
-            
+            <form action="">
+                <div class="wm-filter-block">
+                    <div class="wm-filter-block__item wm-filter-item wm-filter-item--size">
+                        <div class="wm-filter-item__title">Габариты</div>
+                        <div class="wm-filter-item__radio-block">
+                            <ul class="wm-filter-radio-block">
+                                <li>
+                                    <input type="radio" name="wm-filter" value="6x6" id="wm-filter-size-1" class="wm-filter-radio-block__input">
+                                    <label for="wm-filter-size-1">6 x 6</label>
+                                </li>
+                                <li>
+                                    <input type="radio" name="wm-filter" value="8x6" id="wm-filter-size-2" class="wm-filter-radio-block__input">
+                                    <label for="wm-filter-size-2">8 x 6</label>
+                                </li>
+                                <li>
+                                    <input type="radio" name="wm-filter" value="9x6" id="wm-filter-size-3" class="wm-filter-radio-block__input">
+                                    <label for="wm-filter-size-3">9 x 6</label>
+                                </li>
+                                <li>
+                                    <input type="radio" name="wm-filter" value="9x7" id="wm-filter-size-4" class="wm-filter-radio-block__input">
+                                    <label for="wm-filter-size-4">9 x 7</label>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="wm-filter-block__item wm-filter-item wm-filter-item--price">
+                        <div class="wm-filter-item__title">Цена</div>
+                        <div class="wm-filter-item__radio">
+                            <ul class="wm-filter-radio-block">
+                                <li>
+                                    <input type="radio" name="wm-filter" value="to-300" id="wm-filter-price-1" class="wm-filter-radio-block__input">
+                                    <label for="wm-filter-price-1">до 300 т. руб</label>
+                                </li>
+                                <li>
+                                    <input type="radio" name="wm-filter" value="300-500" id="wm-filter-price-2" class="wm-filter-radio-block__input">
+                                    <label for="wm-filter-price-2">300-500 т. руб</label>
+                                </li>
+                                <li>
+                                    <input type="radio" name="wm-filter" value="from-500" id="wm-filter-price-3" class="wm-filter-radio-block__input">
+                                    <label for="wm-filter-price-3">от 500 т. руб</label>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="wm-filter-block__item wm-filter-item wm-filter-item--square">
+                        <div class="wm-filter-item__title">Площадь</div>
+                        <div class="wm-filter-item__radio">
+                            <ul class="wm-filter-radio-block">
+                                <li>
+                                    <input type="radio" name="wm-filter" value="to-100" id="wm-filter-square-1" class="wm-filter-radio-block__input">
+                                    <label for="wm-filter-square-1">до 100 м2</label>
+                                </li>
+                                <li>
+                                    <input type="radio" name="wm-filter" value="100-200" id="wm-filter-square-2" class="wm-filter-radio-block__input">
+                                    <label for="wm-filter-square-2">100-200 м2</label>
+                                </li>
+                                <li>
+                                    <input type="radio" name="wm-filter" value="from-200" id="wm-filter-square-3" class="wm-filter-radio-block__input">
+                                    <label for="wm-filter-square-3">от 200 м2</label>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="wm-sorting-block">
+                    <div class="wm-sorting-block__item">
+                        <div class="wm-sorting-radio-block">
+                            <span class="wm-sorting-radio-block__text">Сортировать по цене</span><span class="wm-sorting-radio-block__input">
+                            <input type="radio" name="wm-sorting" id="wm-sorting-1" class="wm-sorting__input" value="up">
+                            <label for="wm-sorting-1"><i class="fa fa-chevron-circle-up" aria-hidden="true"></i></label>
+                            <input type="radio" name="wm-sorting" id="wm-sorting-2" class="wm-sorting__input" value="down">
+                            <label for="wm-sorting-2"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i></label>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="wm-sorting-block__item"></div>
+                </div>
+            </form>
         </div>
     </section>
     <!-- End section filter -->
