push structure and begin styles

--- a/index.html
+++ b/index.html
@@ -26,25 +26,34 @@
                         </div>
                         <div class="wm-block__buttons">
                             <div class="wm-buttons">
-                                <a class="wm-buttons__link" href="#">Расчет своего проекта</a><button class="wm-buttons__callback">заказать звонок</button>
+                                <div class="wm-buttons__link">
+                                    <a class="wm-buttons-link" href="#">Расчет своего проекта</a>
+                                </div>
+                                <div class="wm-buttons__callback">
+                                    <button class="wm-buttons-callback under-btn">заказать звонок</button>
+                                </div>
                             </div>
                         </div>
                         <div class="wm-block__contact">
                             <div class="wm-contact">
-                                <div class="wm-contact__phone">8&nbsp;(495)&nbsp;991&ndash;37&ndash;41</div>
-                                <div class="wm-contact__email">zakaz@woodmen.ru</div>
+                                <div class="wm-contact__phone">
+                                    <span class="wm-contact-phone">8&nbsp;(495)&nbsp;991&ndash;37&ndash;41</span>
+                                </div>
+                                <div class="wm-contact__email">
+                                    <span class="wm-contact-email">zakaz@woodmen.ru</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="wm-top__navigation">
                         <nav class="wm-navigation">
                             <ul>
-                                <li><a href="#">О компании</a></li>
-                                <li><a href="#">Проекты</a></li>
-                                <li><a href="#">Цены</a></li>
-                                <li><a href="#">Наши работы</a></li>
-                                <li><a href="#">Отзывы</a></li>
-                                <li><a href="#">Контакты</a></li>
+                                <li><a href="#" class="wm-navigation__link">О компании</a></li>
+                                <li><a href="#" class="wm-navigation__link">Проекты</a></li>
+                                <li><a href="#" class="wm-navigation__link">Цены</a></li>
+                                <li><a href="#" class="wm-navigation__link">Наши работы</a></li>
+                                <li><a href="#" class="wm-navigation__link">Отзывы</a></li>
+                                <li><a href="#" class="wm-navigation__link">Контакты</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -55,32 +64,32 @@
             <div class="main">
                 <div class="wm-bot">
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/doma_iz_brusa.png" alt="doma_iz_brusa" width="184" height="129"/></div>
                             <div class="wm-block-category__title">Дома из бруса</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/karkasnie_doma.png" alt="doma_iz_brusa" width="163" height="129"/></div>
                             <div class="wm-block-category__title">Каркасные дома</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/doma_pod_usadku.png" alt="doma_iz_brusa" width="177" height="129"/></div>
                             <div class="wm-block-category__title">Дома под усадку</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/bani_iz_brusa.png" alt="doma_iz_brusa" width="171" height="129"/></div>
                             <div class="wm-block-category__title">Бани из бруса</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -281,7 +290,7 @@
                     <div class="wm-seo-info">
                         <h2 class="wm-seo-info__title">Деревянные дома: от проекта до реализации</h2>
                         <p class="wm-seo-info__text">Среди суматохи современного города иногда так хочется несколько минут тишины и покоя. Чтобы над головой смыкались кроны деревьев, вдалеке тихо журчала речка, а воздух был свеж и прозрачен. Именно за подобной романтикой бывалые туристы с огромными рюкзаками отправляются в многодневные походы. Однако, не всем по плечу такие приключения. Для предпочитающих отдых в собственной удобной кровати под надежной крышей в деревянном доме, цена которого в разы возрастает, когда на улице непогода, приобретение загородного жилья может стать отдушиной в жестком ритме города.
-                        <br>
+                        <br><br>
                             Многие не решаются построить дом из-за связанных с этим финансовых расходов и проблем со строительством. При сотрудничестве с нашей компанией можно минимизировать негативное влияние этих факторов.
                         </p>
                         <div class="wm-seo-info__btn"><a href="#" class="main-btn">Узнать больше о компании</a></div>
